[gd_scene load_steps=17 format=2]

[ext_resource path="res://Pick-Ups/EMP.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Pick-Ups/Repair.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/AICar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/TestD.gd" type="Script" id=5]
[ext_resource path="res://Levels/Road2.tscn" type="PackedScene" id=6]
[ext_resource path="res://Pick-Ups/Fuel.tscn" type="PackedScene" id=7]
[ext_resource path="res://Pick-Ups/Turbo.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/HUD.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Ambience.ogg" type="AudioStream" id=10]
[ext_resource path="res://Assets/EMP_Sound.ogg" type="AudioStream" id=11]
[ext_resource path="res://UI/Pause.tscn" type="PackedScene" id=12]
[ext_resource path="res://UI/BustedBar.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/Light_pick.png" type="Texture" id=14]
[ext_resource path="res://UI/PreGameOver.tscn" type="PackedScene" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 111.922, 69.1834 )

[node name="Level" type="Node2D"]
script = ExtResource( 5 )

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -25.0
autoplay = true

[node name="Fuel" type="Node" parent="."]

[node name="Fuel1" parent="Fuel" instance=ExtResource( 7 )]
position = Vector2( 1405.02, -1426.8 )
scale = Vector2( 0.25, 0.25 )

[node name="Fuel2" parent="Fuel" instance=ExtResource( 7 )]
position = Vector2( 2694.78, 881.196 )
scale = Vector2( 0.25, 0.25 )

[node name="Fuel3" parent="Fuel" instance=ExtResource( 7 )]
position = Vector2( -1410.66, 1920.4 )
scale = Vector2( 0.25, 0.25 )

[node name="Fuel4" parent="Fuel" instance=ExtResource( 7 )]
position = Vector2( -2968.63, -1922.74 )
scale = Vector2( 0.25, 0.25 )

[node name="Fuel5" parent="Fuel" instance=ExtResource( 7 )]
position = Vector2( -1664.67, -1152.31 )
scale = Vector2( 0.25, 0.25 )

[node name="Fuel6" parent="Fuel" instance=ExtResource( 7 )]
position = Vector2( -1151.4, 891.656 )
scale = Vector2( 0.25, 0.25 )

[node name="Fuel7" parent="Fuel" instance=ExtResource( 7 )]
position = Vector2( -3454.45, -399.564 )
scale = Vector2( 0.25, 0.25 )

[node name="EMP" type="Node" parent="."]

[node name="EMP1" parent="EMP" instance=ExtResource( 1 )]
position = Vector2( -3201.01, 1157.46 )
scale = Vector2( 0.25, 0.25 )

[node name="EMP2" parent="EMP" instance=ExtResource( 1 )]
position = Vector2( 3965.3, -124.969 )
scale = Vector2( 0.25, 0.25 )

[node name="EMP3" parent="EMP" instance=ExtResource( 1 )]
position = Vector2( -2174.51, -1663.37 )
scale = Vector2( 0.25, 0.25 )

[node name="Turbo" type="Node" parent="."]

[node name="Turbo1" parent="Turbo" instance=ExtResource( 8 )]
position = Vector2( 3967.97, 1918.15 )
scale = Vector2( 0.25, 0.25 )

[node name="Turbo2" parent="Turbo" instance=ExtResource( 8 )]
position = Vector2( -2940.98, 131.217 )
scale = Vector2( 0.25, 0.25 )

[node name="Turbo3" parent="Turbo" instance=ExtResource( 8 )]
position = Vector2( 385.046, -897.391 )
scale = Vector2( 0.25, 0.25 )

[node name="Repair" type="Node" parent="."]

[node name="Repair1" parent="Repair" instance=ExtResource( 3 )]
position = Vector2( 377.994, -1662.09 )
scale = Vector2( 0.25, 0.25 )

[node name="Repair2" parent="Repair" instance=ExtResource( 3 )]
position = Vector2( 892.749, 1413.94 )
scale = Vector2( 0.25, 0.25 )

[node name="Repair3" parent="Repair" instance=ExtResource( 3 )]
position = Vector2( 2946.19, -639.988 )
scale = Vector2( 0.25, 0.25 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="Road2" parent="Navigation2D" instance=ExtResource( 6 )]
tile_data = PoolIntArray( -720914, 1, 0, -720913, 1, 0, -720912, 1, 0, -720911, 1, 0, -720910, 1, 0, -720909, 1, 0, -720908, 1, 0, -720907, 1, 0, -720906, 1, 0, -720905, 1, 0, -720904, 1, 0, -720903, 1, 0, -720902, 1, 0, -720901, 1, 0, -720900, 1, 0, -720899, 1, 0, -720898, 1, 0, -720897, 1, 0, -786432, 1, 0, -786431, 1, 0, -786430, 1, 0, -786429, 1, 0, -786428, 1, 0, -786427, 1, 0, -786426, 1, 0, -786425, 1, 0, -786424, 1, 0, -786423, 1, 0, -786422, 1, 0, -786421, 1, 0, -786420, 1, 0, -786419, 1, 0, -786418, 1, 0, -786417, 1, 0, -786416, 1, 0, -786415, 1, 0, -786414, 1, 0, -786413, 1, 0, -655378, 1, 0, -655377, 1, 0, -655376, 1, 0, -655375, 1, 0, -655374, 1, 0, -655373, 1, 0, -655372, 1, 0, -655371, 1, 0, -655370, 1, 0, -655369, 1, 0, -655368, 1, 0, -655367, 1, 0, -655366, 1, 0, -655365, 1, 0, -655364, 1, 0, -655363, 1, 0, -655362, 1, 0, -655361, 1, 0, -720896, 1, 0, -720895, 1, 0, -720894, 1, 0, -720893, 1, 0, -720892, 1, 0, -720891, 1, 0, -720890, 1, 0, -720889, 1, 0, -720888, 1, 0, -720887, 1, 0, -720886, 1, 0, -720885, 1, 0, -720884, 1, 0, -720883, 1, 0, -720882, 1, 0, -720881, 1, 0, -720880, 1, 0, -720879, 1, 0, -720878, 1, 0, -720877, 1, 0, -589842, 1, 0, -589841, 1, 0, -589840, 1, 0, -589839, 1, 0, -589838, 1, 0, -589837, 1, 0, -589836, 1, 0, -589835, 1, 0, -589834, 1, 0, -589833, 1, 0, -589832, 1, 0, -589831, 1, 0, -589830, 1, 0, -589829, 1, 0, -589828, 1, 0, -589827, 1, 0, -589826, 1, 0, -589825, 1, 0, -655360, 1, 0, -655359, 1, 0, -655358, 1, 0, -655357, 1, 0, -655356, 1, 0, -655355, 1, 0, -655354, 1, 0, -655353, 1, 0, -655352, 1, 0, -655351, 1, 0, -655350, 1, 0, -655349, 1, 0, -655348, 1, 0, -655347, 1, 0, -655346, 1, 0, -655345, 1, 0, -655344, 1, 0, -655343, 1, 0, -655342, 1, 0, -655341, 1, 0, -524306, 1, 0, -524305, 1, 0, -524304, 1, 0, -524303, 1, 0, -524302, 1, 0, -524301, 1, 0, -524300, 1, 0, -524299, 1, 0, -524298, 1, 0, -524297, 1, 0, -524296, 1, 0, -524295, 1, 0, -524294, 1, 0, -524293, 1, 0, -524292, 1, 0, -524291, 1, 0, -524290, 1, 0, -524289, 1, 0, -589824, 1, 0, -589823, 1, 0, -589822, 1, 0, -589821, 1, 0, -589820, 1, 0, -589819, 1, 0, -589818, 1, 0, -589817, 1, 0, -589816, 1, 0, -589815, 1, 0, -589814, 1, 0, -589813, 1, 0, -589812, 1, 0, -589811, 1, 0, -589810, 1, 0, -589809, 1, 0, -589808, 1, 0, -589807, 1, 0, -589806, 1, 0, -589805, 1, 0, -458770, 1, 0, -458769, 1, 0, -458768, 1, 0, -458767, 1, 0, -458766, 1, 0, -458765, 0, 1, -458764, 0, 196611, -458763, 1, 0, -458762, 1, 0, -458761, 1, 0, -458760, 1, 0, -458759, 1, 0, -458758, 1, 0, -458757, 1, 0, -458756, 1, 0, -458755, 1, 0, -458754, 1, 0, -458753, 1, 0, -524288, 1, 0, -524287, 1, 0, -524286, 1, 0, -524285, 1, 0, -524284, 1, 0, -524283, 1, 0, -524282, 1, 0, -524281, 1, 0, -524280, 1, 0, -524279, 1, 0, -524278, 1, 0, -524277, 1, 0, -524276, 1, 0, -524275, 1, 0, -524274, 1, 0, -524273, 1, 0, -524272, 1, 0, -524271, 1, 0, -524270, 1, 0, -524269, 1, 0, -393234, 1, 0, -393233, 1, 0, -393232, 1, 0, -393231, 1, 0, -393230, 1, 0, -393229, 0, 65536, -393228, 1, 0, -393227, 1, 0, -393226, 1, 0, -393225, 0, 1, -393224, 0, 196610, -393223, 0, 2, -393222, 0, 196610, -393221, 0, 196610, -393220, 0, 196610, -393219, 0, 196610, -393218, 0, 196610, -393217, 0, 196610, -458752, 0, 196610, -458751, 0, 3, -458750, 1, 0, -458749, 1, 0, -458748, 1, 0, -458747, 1, 0, -458746, 1, 0, -458745, 1, 0, -458744, 1, 0, -458743, 1, 0, -458742, 1, 0, -458741, 1, 0, -458740, 1, 0, -458739, 1, 0, -458738, 1, 0, -458737, 1, 0, -458736, 1, 0, -458735, 1, 0, -458734, 1, 0, -458733, 1, 0, -327698, 1, 0, -327697, 1, 0, -327696, 1, 0, -327695, 1, 0, -327694, 1, 0, -327693, 0, 65536, -327692, 1, 0, -327691, 1, 0, -327690, 1, 0, -327689, 0, 65536, -327688, 1, 0, -327687, 0, 65536, -327686, 1, 0, -327685, 1, 0, -327684, 1, 0, -327683, 1, 0, -327682, 1, 0, -327681, 1, 0, -393216, 1, 0, -393215, 0, 65536, -393214, 1, 0, -393213, 1, 0, -393212, 0, 196609, -393211, 0, 2, -393210, 0, 196610, -393209, 0, 196610, -393208, 0, 3, -393207, 1, 0, -393206, 1, 0, -393205, 1, 0, -393204, 1, 0, -393203, 1, 0, -393202, 1, 0, -393201, 1, 0, -393200, 1, 0, -393199, 1, 0, -393198, 1, 0, -393197, 1, 0, -262162, 1, 0, -262161, 1, 0, -262160, 1, 0, -262159, 1, 0, -262158, 1, 0, -262157, 0, 131073, -262156, 0, 196610, -262155, 0, 2, -262154, 0, 196610, -262153, 0, 131074, -262152, 0, 196610, -262151, 0, 65538, -262150, 0, 196610, -262149, 0, 196610, -262148, 0, 196610, -262147, 0, 196610, -262146, 0, 3, -262145, 1, 0, -327680, 1, 0, -327679, 0, 65536, -327678, 1, 0, -327677, 1, 0, -327676, 1, 0, -327675, 0, 65536, -327674, 1, 0, -327673, 1, 0, -327672, 0, 65536, -327671, 1, 0, -327670, 1, 0, -327669, 1, 0, -327668, 1, 0, -327667, 1, 0, -327666, 1, 0, -327665, 1, 0, -327664, 1, 0, -327663, 1, 0, -327662, 1, 0, -327661, 1, 0, -196626, 1, 0, -196625, 1, 0, -196624, 1, 0, -196623, 1, 0, -196622, 1, 0, -196621, 1, 0, -196620, 1, 0, -196619, 0, 65536, -196618, 1, 0, -196617, 1, 0, -196616, 1, 0, -196615, 0, 65536, -196614, 1, 0, -196613, 1, 0, -196612, 1, 0, -196611, 1, 0, -196610, 0, 131073, -196609, 0, 196610, -262144, 0, 196610, -262143, 0, 65538, -262142, 0, 196610, -262141, 0, 196610, -262140, 0, 2, -262139, 0, 131075, -262138, 1, 0, -262137, 1, 0, -262136, 0, 131073, -262135, 0, 196610, -262134, 0, 3, -262133, 1, 0, -262132, 1, 0, -262131, 1, 0, -262130, 1, 0, -262129, 1, 0, -262128, 1, 0, -262127, 1, 0, -262126, 1, 0, -262125, 1, 0, -131090, 1, 0, -131089, 1, 0, -131088, 1, 0, -131087, 1, 0, -131086, 1, 0, -131085, 1, 0, -131084, 1, 0, -131083, 0, 65536, -131082, 1, 0, -131081, 1, 0, -131080, 1, 0, -131079, 0, 131073, -131078, 0, 3, -131077, 1, 0, -131076, 1, 0, -131075, 1, 0, -131074, 1, 0, -131073, 1, 0, -196608, 1, 0, -196607, 0, 65536, -196606, 1, 0, -196605, 1, 0, -196604, 0, 65536, -196603, 1, 0, -196602, 1, 0, -196601, 1, 0, -196600, 1, 0, -196599, 1, 0, -196598, 0, 131073, -196597, 0, 3, -196596, 1, 0, -196595, 1, 0, -196594, 1, 0, -196593, 1, 0, -196592, 1, 0, -196591, 1, 0, -196590, 1, 0, -196589, 1, 0, -65554, 1, 0, -65553, 1, 0, -65552, 1, 0, -65551, 1, 0, -65550, 0, 196609, -65549, 0, 196610, -65548, 0, 196610, -65547, 0, 65539, -65546, 1, 0, -65545, 1, 0, -65544, 1, 0, -65543, 1, 0, -65542, 0, 131073, -65541, 0, 196610, -65540, 0, 3, -65539, 1, 0, -65538, 1, 0, -65537, 1, 0, -131072, 1, 0, -131071, 0, 65536, -131070, 1, 0, -131069, 1, 0, -131068, 0, 65536, -131067, 1, 0, -131066, 1, 0, -131065, 1, 0, -131064, 1, 0, -131063, 1, 0, -131062, 1, 0, -131061, 0, 131073, -131060, 0, 196610, -131059, 0, 3, -131058, 1, 0, -131057, 1, 0, -131056, 1, 0, -131055, 1, 0, -131054, 1, 0, -131053, 1, 0, -18, 1, 0, -17, 1, 0, -16, 1, 0, -15, 1, 0, -14, 1, 0, -13, 1, 0, -12, 1, 0, -11, 0, 65536, -10, 1, 0, -9, 1, 0, -8, 1, 0, -7, 1, 0, -6, 1, 0, -5, 1, 0, -4, 0, 65537, -3, 0, 196610, -2, 0, 196610, -1, 0, 196610, -65536, 0, 196610, -65535, 0, 131074, -65534, 0, 2, -65533, 0, 196610, -65532, 0, 131074, -65531, 0, 196610, -65530, 0, 3, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 0, 65537, -65522, 0, 196610, -65521, 0, 3, -65520, 1, 0, -65519, 1, 0, -65518, 1, 0, -65517, 1, 0, 65518, 1, 0, 65519, 1, 0, 65520, 1, 0, 65521, 1, 0, 65522, 1, 0, 65523, 1, 0, 65524, 0, 1, 65525, 0, 131074, 65526, 0, 196610, 65527, 0, 196610, 65528, 0, 196610, 65529, 0, 196610, 65530, 0, 196610, 65531, 0, 2, 65532, 0, 131075, 65533, 1, 0, 65534, 1, 0, 65535, 1, 0, 0, 1, 0, 1, 1, 0, 2, 0, 65536, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 0, 65536, 7, 1, 0, 8, 1, 0, 9, 0, 196609, 10, 0, 196610, 11, 0, 196610, 12, 0, 2, 13, 0, 131075, 14, 1, 0, 15, 0, 65536, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 131054, 1, 0, 131055, 1, 0, 131056, 1, 0, 131057, 1, 0, 131058, 1, 0, 131059, 1, 0, 131060, 0, 65536, 131061, 1, 0, 131062, 1, 0, 131063, 1, 0, 131064, 1, 0, 131065, 1, 0, 131066, 1, 0, 131067, 0, 65536, 131068, 1, 0, 131069, 1, 0, 131070, 1, 0, 131071, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 0, 131073, 65539, 0, 196610, 65540, 0, 196610, 65541, 0, 196610, 65542, 0, 131074, 65543, 0, 3, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 0, 65536, 65549, 1, 0, 65550, 1, 0, 65551, 0, 65536, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 196590, 1, 0, 196591, 1, 0, 196592, 1, 0, 196593, 1, 0, 196594, 1, 0, 196595, 1, 0, 196596, 0, 131073, 196597, 0, 196610, 196598, 0, 196610, 196599, 0, 196610, 196600, 0, 3, 196601, 1, 0, 196602, 1, 0, 196603, 0, 65536, 196604, 1, 0, 196605, 1, 0, 196606, 1, 0, 196607, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 0, 65536, 131080, 1, 0, 131081, 1, 0, 131082, 0, 0, 131083, 1, 0, 131084, 0, 65536, 131085, 1, 0, 131086, 1, 0, 131087, 0, 65536, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 262126, 1, 0, 262127, 1, 0, 262128, 1, 0, 262129, 1, 0, 262130, 1, 0, 262131, 1, 0, 262132, 1, 0, 262133, 1, 0, 262134, 1, 0, 262135, 1, 0, 262136, 0, 65536, 262137, 1, 0, 262138, 1, 0, 262139, 0, 131073, 262140, 0, 196610, 262141, 0, 196610, 262142, 0, 196610, 262143, 0, 196610, 196608, 0, 196610, 196609, 0, 196610, 196610, 0, 196610, 196611, 0, 196610, 196612, 0, 3, 196613, 1, 0, 196614, 1, 0, 196615, 0, 131073, 196616, 0, 2, 196617, 0, 196610, 196618, 0, 131074, 196619, 0, 196610, 196620, 0, 131075, 196621, 1, 0, 196622, 1, 0, 196623, 0, 65536, 196624, 1, 0, 196625, 1, 0, 196626, 1, 0, 196627, 1, 0, 327662, 1, 0, 327663, 1, 0, 327664, 1, 0, 327665, 1, 0, 327666, 1, 0, 327667, 0, 1, 327668, 0, 196610, 327669, 0, 196610, 327670, 0, 196610, 327671, 0, 196610, 327672, 0, 131075, 327673, 1, 0, 327674, 1, 0, 327675, 1, 0, 327676, 1, 0, 327677, 1, 0, 327678, 1, 0, 327679, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 0, 65536, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 0, 65536, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 0, 65536, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 393198, 1, 0, 393199, 1, 0, 393200, 1, 0, 393201, 1, 0, 393202, 1, 0, 393203, 0, 65536, 393204, 1, 0, 393205, 1, 0, 393206, 1, 0, 393207, 1, 0, 393208, 1, 0, 393209, 1, 0, 393210, 1, 0, 393211, 1, 0, 393212, 1, 0, 393213, 1, 0, 393214, 1, 0, 393215, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 0, 1, 327684, 0, 131075, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 0, 65536, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 0, 65536, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 458734, 1, 0, 458735, 1, 0, 458736, 1, 0, 458737, 1, 0, 458738, 1, 0, 458739, 0, 131073, 458740, 0, 3, 458741, 1, 0, 458742, 1, 0, 458743, 1, 0, 458744, 1, 0, 458745, 1, 0, 458746, 1, 0, 458747, 1, 0, 458748, 1, 0, 458749, 1, 0, 458750, 1, 0, 458751, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 0, 65536, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 0, 65536, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 0, 65536, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 524270, 1, 0, 524271, 1, 0, 524272, 1, 0, 524273, 1, 0, 524274, 1, 0, 524275, 1, 0, 524276, 0, 131073, 524277, 0, 196610, 524278, 0, 196610, 524279, 0, 196610, 524280, 0, 196610, 524281, 0, 196610, 524282, 0, 2, 524283, 0, 196610, 524284, 0, 196610, 524285, 0, 196610, 524286, 0, 196610, 524287, 0, 196610, 458752, 0, 196610, 458753, 0, 196610, 458754, 0, 196610, 458755, 0, 131074, 458756, 0, 196610, 458757, 0, 196610, 458758, 0, 196610, 458759, 0, 196610, 458760, 0, 131074, 458761, 0, 196610, 458762, 0, 196610, 458763, 0, 196610, 458764, 0, 196610, 458765, 0, 196610, 458766, 0, 196610, 458767, 0, 131075, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 589806, 1, 0, 589807, 1, 0, 589808, 1, 0, 589809, 1, 0, 589810, 1, 0, 589811, 1, 0, 589812, 1, 0, 589813, 1, 0, 589814, 1, 0, 589815, 1, 0, 589816, 1, 0, 589817, 1, 0, 589818, 0, 131072, 589819, 1, 0, 589820, 1, 0, 589821, 1, 0, 589822, 1, 0, 589823, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 655342, 1, 0, 655343, 1, 0, 655344, 1, 0, 655345, 1, 0, 655346, 1, 0, 655347, 1, 0, 655348, 1, 0, 655349, 1, 0, 655350, 1, 0, 655351, 1, 0, 655352, 1, 0, 655353, 1, 0, 655354, 1, 0, 655355, 1, 0, 655356, 1, 0, 655357, 1, 0, 655358, 1, 0, 655359, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 720878, 1, 0, 720879, 1, 0, 720880, 1, 0, 720881, 1, 0, 720882, 1, 0, 720883, 1, 0, 720884, 1, 0, 720885, 1, 0, 720886, 1, 0, 720887, 1, 0, 720888, 1, 0, 720889, 1, 0, 720890, 1, 0, 720891, 1, 0, 720892, 1, 0, 720893, 1, 0, 720894, 1, 0, 720895, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 786414, 1, 0, 786415, 1, 0, 786416, 1, 0, 786417, 1, 0, 786418, 1, 0, 786419, 1, 0, 786420, 1, 0, 786421, 1, 0, 786422, 1, 0, 786423, 1, 0, 786424, 1, 0, 786425, 1, 0, 786426, 1, 0, 786427, 1, 0, 786428, 1, 0, 786429, 1, 0, 786430, 1, 0, 786431, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 851950, 1, 0, 851951, 1, 0, 851952, 1, 0, 851953, 1, 0, 851954, 1, 0, 851955, 1, 0, 851956, 1, 0, 851957, 1, 0, 851958, 1, 0, 851959, 1, 0, 851960, 1, 0, 851961, 1, 0, 851962, 1, 0, 851963, 1, 0, 851964, 1, 0, 851965, 1, 0, 851966, 1, 0, 851967, 1, 0, 786432, 1, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786451, 1, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 1659.6, 384.497 )

[node name="AICar" parent="." instance=ExtResource( 4 )]
position = Vector2( 2687.75, 645.95 )
rotation = 1.5708

[node name="AICar2" parent="." instance=ExtResource( 4 )]
position = Vector2( -1406.33, 2177.56 )
rotation = -1.5708

[node name="AICar3" parent="." instance=ExtResource( 4 )]
position = Vector2( 1169.75, -1417.92 )

[node name="EMPTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="GameTimer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true
autostart = true

[node name="EndTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="SafeZone" type="Area2D" parent="."]
visible = false
modulate = Color( 0.105882, 0.72549, 0.172549, 1 )
position = Vector2( 2439.41, 129.684 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SafeZone"]
scale = Vector2( 1.12578, 1.75503 )
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="SafeZone"]
texture = ExtResource( 14 )
color = Color( 0.0431373, 0.956863, 0.0588235, 1 )
energy = 3.83
shadow_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
scale = Vector2( 0.5, 0.5 )
transform = Transform2D( 0.5, 0, 0, 0.5, 0, 0 )

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 9 )]

[node name="Pause" parent="CanvasLayer" instance=ExtResource( 12 )]
visible = false

[node name="Busted" parent="CanvasLayer" instance=ExtResource( 13 )]

[node name="PreGameOver" parent="CanvasLayer" instance=ExtResource( 15 )]
visible = false

[node name="SoundFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = 10.0

[node name="BustTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="EMPTimer" to="." method="_on_EMPTimer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
[connection signal="body_entered" from="SafeZone" to="." method="_on_SafeZone_body_entered"]
[connection signal="timeout" from="BustTimer" to="." method="_on_BustTimer_timeout"]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout"]
